# ResourceManagement

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json  testObject.json
.cache/clangd/index/: Directory.cpp.2EB5137D9FB8019B.idx  Directory.hpp.471D4501D0DD86D0.idx  JSONDeserializable.cpp.BF245BBABDB3B526.idx  JSONDeserializable.hpp.0CEFC303B5CC40CF.idx  JSONSerializator.cpp.9F2ED3A1E3C7C823.idx  Pimpl.cpp.8D4F7A63D2419635.idx  Pimpl.hpp.63C854F6AC62FD6A.idx  Resource.cpp.F816EC317429D2E6.idx  Resource.hpp.FA919936C70CD175.idx  ResourceBase.cpp.7AE7D976C69DFEF3.idx  ResourceBase.hpp.4535DAF926AF5F13.idx  ResourceManagementEXPORT.hpp.B9F5E802039793FF.idx  ResourceManager.cpp.7451E792EF636E2B.idx  ResourceManager.hpp.6A9BE2E89F9F4C1C.idx  TestResourceObject.cpp.C362F64C75A691EF.idx  TestResourceObject.hpp.3EDF992263FC8167.idx  __msvc_bit_utils.hpp.CE6B81C97D99889D.idx  __msvc_chrono.hpp.074BAFC8C85469D2.idx  __msvc_filebuf.hpp.6878FC7A4F7FCB0D.idx  __msvc_format_ucd_tables.hpp.8CB159C1FBC80775.idx  __msvc_formatter.hpp.F661B597F2EAAA7A.idx  __msvc_heap_algorithms.hpp.8A356FF53EF91399.idx  __msvc_int128.hpp.41568196040E0C9D.idx  __msvc_iter_core.hpp.4EEA260A607C1087.idx  __msvc_minmax.hpp.F205DF41093640B7.idx  __msvc_print.hpp.B4B97866751B15E9.idx  __msvc_ranges_to.hpp.C27036A97A42F543.idx  __msvc_sanitizer_annotate_container.hpp.86B6A342A61FB319.idx  __msvc_string_view.hpp.E626759A4A9F1ECE.idx  __msvc_system_error_abi.hpp.49B9C750595111EA.idx  __msvc_threads_core.hpp.179A8BB290F0AD39.idx  __msvc_xlocinfo_types.hpp.C7B719EC47B507BC.idx  __stddef_header_macro.h.D7AAF36DFD81B09D.idx  __stddef_max_align_t.h.DB0ACCE3F4DC363B.idx  __stddef_null.h.5772453CD9736A8A.idx  __stddef_nullptr_t.h.0E07BDE8A266FDFF.idx  __stddef_offsetof.h.F327C46B7E7E2BA3.idx  __stddef_ptrdiff_t.h.783546BCD9AFF017.idx  __stddef_size_t.h.6E9AC8E7E6CCA273.idx  __stddef_wchar_t.h.F2CFC4FFA7548D4C.idx  (+320 more)
src/: Directory.cpp  Directory.hpp  Resource.cpp  Resource.hpp  ResourceBase.hpp  ResourceManagementEXPORT.hpp  ResourceManager.cpp  ResourceManager.hpp  Resourceable.hpp  Resourceable17.hpp  TestResourceObject.cpp  TestResourceObject.hpp
src/dynamic/: Resource.cpp  ResourceManager.hpp  Resourceable.hpp
src/static/: ErasedManager.hpp  ManagerRegistry.hpp  StaticResourceManager.cpp  StaticResourceManager.hpp
test/: CMakeLists.txt  main.cpp
test/src/: TestResourceObject.cpp  TestResourceObject.hpp  TestResourceObjectExtended.cpp  TestResourceObjectExtended.hpp  main.cpp
